--- a/theme-ventura/Ventura.theme/Resources/config.plist
+++ b/theme-ventura/Ventura.theme/Resources/config.plist
@@ -1,4 +1,4 @@
 {
   GVThemeColorsList = ("Blue", "Purple", "Pink", "Red", "Orange", "Yellow", "Green", "Graphite");
-  GVThemeAccentColor = "Blue";
+  GVThemeAccentColor = "Green";
 }
